@@ -1,3 +1,6 @@
+2013-01-18  Alex Tutubalin <lexa@lexa.ru>
+   * Support for Imacon Ixpress 39Mpix Multi-shot files
+
 2012-12-24  Alex Tutubalin <lexa@lexa.ru>
    * Dcraw 9.17 imported, support for new cameras:
      Canon 6D and EOS M, Casio EX-ZR100, Fujifilm X-E1, Leica D-LUX6 and
